# std-training

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  LICENSE-MIT.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json  test.sh
.github/: button-interrupt.test.yaml  hardware-check.test.yaml  http-client.test.yaml
.github/workflows/: CI.yml  book.yml  ci.yml  docker_image.yml  dockerimage.yml  issue_handler.yml  main.yml  wokwi_projects.yml
advanced/: README.md
advanced/button-interrupt/: .gitignore  Cargo.toml  cfg.toml.example  diagram.json  sdkconfig.defaults  wokwi.toml
advanced/button-interrupt/.cargo/: config.toml
advanced/button-interrupt/examples/: solution.rs  solution_led.rs
advanced/button-interrupt/exercise/: Cargo.toml
advanced/button-interrupt/exercise/examples/: solution.rs
advanced/button-interrupt/exercise/src/: main.rs
advanced/button-interrupt/solution/: Cargo.toml  README.md  rust-toolchain.toml
advanced/button-interrupt/solution/src/: main.rs  main_1.rs  main_led.rs  main_safe.rs
advanced/button-interrupt/src/: main.rs  main_no_xqueue.rs
advanced/i2c-driver/: Cargo.toml  diagram.json  wokwi.toml
advanced/i2c-driver-exercise/: Cargo.toml
advanced/i2c-driver-exercise/src/: imc42670p.rs  main.rs
advanced/i2c-driver/exercise/: Cargo.toml  build.rs  rust-toolchain.toml
advanced/i2c-driver/exercise/src/: icm42670p.rs  imc42670p.rs  lib.rs  main.rs
advanced/i2c-driver/solution/: Cargo.toml  rust-toolchain.toml
advanced/i2c-driver/solution/.cargo/: config.toml
advanced/i2c-driver/solution/src/: icm42670p.rs  imc42670p.rs  lib.rs  main.rs
advanced/i2c-driver/src/: icm42670p.rs  icm42670p_solution.rs  lib.rs  main.rs
advanced/i2c-sensor-exercise/: Cargo.toml
advanced/i2c-sensor-exercise/src/: imc42670p.rs  lib.rs  main.rs
advanced/i2c-sensor-reading/: Cargo.toml  diagram.json  wokwi.toml
advanced/i2c-sensor-reading/.cargo/: config.toml
advanced/i2c-sensor-reading/examples/: part_1.rs  part_2.rs
advanced/i2c-sensor-reading/exercise/: Cargo.toml
advanced/i2c-sensor-reading/exercise/src/: main.rs
advanced/i2c-sensor-reading/solution/: Cargo.toml
advanced/i2c-sensor-reading/solution/src/: main.rs  main_1.rs  main_both.rs
advanced/i2c-sensor-reading/src/: main.rs
book/: book.toml
book/src/: 000 summary scratch.md  01_intro.md  02_0_preparations.md  02_1_hardware.md  02_2_software.md  02_3_repository.md  02_4_hello_board.md  02_preparations.md  03_0_intro_workshop.md  03_1_project_orga.md  03_2_cargo_generate.md  03_3_1_http_https_client.md  03_3_2_http_client.md  03_3_3_https_client.md  03_3__1_http_https_client.md  03_3_esp_rs_crates.md  03_3_http_client.md  03_4_http_client.md  03_4_http_server.md  03_5_0_mqtt.md  03_5_1_mqtt.md  03_5_2_mqtt.md  03_5_3_mqtt.md  03_5_http_server.md  03_5_mqtt.md  04_0_advanced_workshop.md  04_1_gpio.md  04_2_low_level_io.md  04_3_0_i2c.md  04_3_1_i2c.md  04_3_2_i2c.md  04_3_3_i2c.md  04_3_i2c.md  04_4_0_interrupts.md  04_4_1_interrupts.md  04_4_2_interrupts.md  04_4_3_interrupts.md  04_4_interrupts.md  04_5_rgb_led.md  04_6_misc.md  (+7 more)
common/extra/mqtt-python-client/: .gitignore  README.md
common/lib/bsc/: Cargo.toml
common/lib/bsc/src/: led.rs  lib.rs  wifi.rs
common/lib/esp32-c3-dkc02-bsc/: Cargo.toml  rust-toolchain.toml
common/lib/esp32-c3-dkc02-bsc/.cargo/: config.toml
common/lib/esp32-c3-dkc02-bsc/examples/: wifi.rs  ws2812.rs
common/lib/esp32-c3-dkc02-bsc/src/: led.rs  lib.rs  temp_sensor.rs  wifi.rs
common/lib/get-uuid/: .gitignore  Cargo.toml  README.md  _uuid.rs  build.rs  uuid.toml
common/lib/get-uuid/src/: lib.rs
common/lib/icm42670p/: Cargo.toml
common/lib/icm42670p/src/: lib.rs
common/lib/imc42670p/: Cargo.toml
common/lib/imc42670p/src/: lib.rs
common/lib/mqtt-messages/: Cargo.toml
common/lib/mqtt-messages/src/: lib.rs
common/lib/rgb-led/: Cargo.toml
common/lib/rgb-led/.cargo/: config.toml
common/lib/rgb-led/examples/: ws2812.rs
common/lib/rgb-led/src/: lib.rs
common/lib/wifi/: Cargo.toml  cfg.toml.example  rust-toolchain.toml
common/lib/wifi/.cargo/: config.toml
common/lib/wifi/examples/: wifi.rs
common/lib/wifi/src/: lib.rs
extra/mqtt-python-client/: README.md  mqtt.py
intro/: README.md
intro/hardware-check/: .gitignore  Cargo.toml  README.md  build.rs  cfg.toml.example  diagram.json  rust-toolchain.toml  sdkconfig.defaults  wokwi.toml
intro/hardware-check/.cargo/: config.toml
intro/hardware-check/src/: config.rs  main.rs
intro/http-client/: Cargo.toml  build.rs  diagram.json  rust-toolchain.toml  sdkconfig.defaults  wokwi.toml
intro/http-client/.cargo/: config.toml
intro/http-client/examples/: http_client.rs  https_client.rs
intro/http-client/exercise/: Cargo.toml
intro/http-client/exercise/src/: main.rs
intro/http-client/solution/: Cargo.toml  cfg.toml.example  sdkconfig.defaults
intro/http-client/solution/src/: main.rs  solution1.rs
intro/http-client/src/: main.rs
intro/http-server/: Cargo.toml  build.rs  rust-toolchain.toml
intro/http-server/.cargo/: config.toml
intro/http-server/examples/: http_server.rs
intro/http-server/exercise/: Cargo.toml  cfg.toml.example  rust-toolchain.toml
intro/http-server/exercise/src/: config.rs  main.rs
intro/http-server/solution/: Cargo.toml  sdkconfig.defaults
intro/http-server/solution/src/: main.rs
intro/http-server/src/: main.rs
intro/mqtt/example-client/: Cargo.toml  cfg.toml.example
intro/mqtt/example-client/src/: main.rs
intro/mqtt/exercise/: .gitignore  Cargo.toml  build.rs  cfg.toml.example  rust-toolchain.toml  sdkconfig.defaults
intro/mqtt/exercise/.cargo/: config.toml
intro/mqtt/exercise/examples/: solution_publ.rs  solution_publ_rcv.rs
intro/mqtt/exercise/src/: main.rs
intro/mqtt/host-client/: Cargo.toml  cfg.toml.example  rust-toolchain.toml
intro/mqtt/host-client/src/: main.rs
intro/mqtt/solution/: Cargo.toml  cfg.toml.example  sdkconfig.defaults
scripts/: build.sh  flash.sh  run-wokwi.sh
wokwi/: dummy.elf  requirements.txt  run.sh  wokwi-server-esp32c3.py  wokwi-server.py
(+4 files in other folders)
