[package]
name = "button-interrupt"
version = "0.1.0"
authors = [
    "Anatol Ulrich <anatol.ulrich@ferrous-systems.com>",
    "Tanks Transfeld <tanks.transfeld@ferrous-systems.com>",
    "Sergio Gasquez <sergio.gasquez@gmail.com>",
]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["native"]
native = ["esp-idf-sys/native"]

[dependencies]
anyhow = "=1.0.71"
esp-idf-hal = "=0.41.1"
esp-idf-sys = { version = "=0.33.0", features = ["binstart"] }
rgb-led = { path = "../../common/lib/rgb-led" }

[build-dependencies]
anyhow = "=1.0.71"
embuild = "=0.31.2"
