[package]
name = "i2c-driver"
version = "0.1.0"
authors = [
    "Sergio Gasquez <sergio.gasquez@gmail.com>",
    "Tanks Transfeld <tanks.transfeld@ferrous-systems.com>",
]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug     = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
anyhow       = "=1.0.86"
embedded-hal = "=0.2.7"
esp-idf-svc  = "=0.49.0"

[build-dependencies]
embuild = "=0.32.0"
