[package]
name = "i2c-sensor-exercise"
version = "0.1.0"
authors = [
    "Tanks Transfeld <tanks.transfeld@ferrous-systems.com>",
    "Sergio Gasquez <sergio.gasquez@gmail.com>",
]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["native"]
native = ["esp-idf-sys/native"]

[dependencies]
esp-idf-sys = { version = "=0.32.1", features = ["binstart"] }
esp-idf-hal = "=0.40.1"
anyhow = "=1.0.69"
embedded-hal = "=0.2.7"
shtcx = "=0.11.0"
lis3dh = "=0.4.2"
shared-bus = "=0.2.5"
icm42670p = { path = "../../common/lib/icm42670p" }

[build-dependencies]
embuild = "=0.31.0"
anyhow = "=1.0.69"
