[package]
name = "http-client"
version = "0.1.0"
authors = [
    "Anatol Ulrich <anatol.ulrich@ferrous-systems.com>",
    "Sergio Gasquez <sergio.gasquez@gmail.com>",
]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["native"]
native = ["esp-idf-sys/native"]

[dependencies]
esp-idf-svc = { version = "0.45.0", features = ["experimental", "alloc"] }
esp-idf-hal = "=0.40.1"
esp-idf-sys = { version = "=0.32.1", features = ["binstart"] }
wifi = { path = "../../common/lib/wifi" }
embedded-svc = "=0.24.0"
anyhow = "=1.0.69"
toml-cfg = "=0.1.3"

[build-dependencies]
embuild = "=0.31.0"
anyhow = "=1.0.69"
toml-cfg = "=0.1.3"
