[package]
name = "http-client"
version = "0.1.0"
authors = [
    "Anatol Ulrich <anatol.ulrich@ferrous-systems.com>",
    "Sergio Gasquez <sergio.gasquez@gmail.com>",
]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug     = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
anyhow       = "=1.0.86"
embedded-svc = "=0.28.0"
esp-idf-svc  = "=0.49.0"
toml-cfg     = "=0.1.3"
wifi         = { path = "../../common/lib/wifi" }

[build-dependencies]
embuild  = "=0.32.0"
toml-cfg = "=0.1.3"
