[package]
name = "esp32-c3-dkc02-bsc"
version = "0.1.0"
edition = "2021"

[dependencies]
esp32c3 = "=0.11.0"
esp-idf-sys = { version = "=0.32.1" }
esp-idf-svc = { version = "=0.45.0", features = ["experimental", "alloc"] }
esp-idf-hal = "=0.40.1"
embedded-svc = "=0.24.0"
rgb = "=0.8.36"
log = "=0.4.17"
anyhow = "=1.0.69"
toml-cfg = "=0.1.3"
riscv = "=0.10.1"
ignore = "=0.4.20"

[build-dependencies]
embuild = "0.31.0"
anyhow = "1"

[dev-dependencies]
anyhow = "1"
esp-idf-sys = { version = "0.32", features = ["native", "binstart"] }
