[package]
name = "get-uuid"
version = "0.1.0"
authors = [
    "Anatol Ulrich <anatol.ulrich@ferrous-systems.com>",
    "Sergio Gasquez <sergio.gasquez@gmail.com>",
]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "=1.0.71"
toml = "=0.5.11"

[build-dependencies]
anyhow = "=1.0.71"
toml = "=0.5.11"
uuid = { version = "=1.3.3", features = ["v4"] }
