[package]
name = "rgb-led"
version = "0.1.0"
edition = "2021"
authors = ["Sergio Gasquez <sergio.gasquez@gmail.com>"]

[dependencies]
anyhow = "=1.0.69"
esp-idf-hal = "=0.40.1"
esp-idf-sys = "=0.32.1"
log = "=0.4.17"
rgb = "=0.8.36"

[build-dependencies]
anyhow = "=1.0.69"
embuild = "=0.31.1"

[dev-dependencies]
anyhow = "=1.0.69"
esp-idf-svc = { version = "=0.45.0", features = ["experimental", "alloc"] }
esp-idf-sys = { version = "=0.32.1", features = ["native", "binstart"] }
