[package]
name = "wifi"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-idf-sys = { version = "=0.32.1" }
esp-idf-svc = { version = "=0.45.0", features = ["experimental", "alloc"] }
esp-idf-hal = "=0.40.1"
embedded-svc = "=0.24.0"
log = "=0.4.17"
anyhow = "=1.0.69"

[build-dependencies]
embuild = "0.31.0"
anyhow = "1"

[dev-dependencies]
anyhow = "1"
esp-idf-sys = { version = "0.32", features = ["native", "binstart"] }
toml-cfg = "=0.1.3"
