[package]
name = "wifi"
version = "0.1.0"
edition = "2021"
authors = ["Sergio Gasquez <sergio.gasquez@gmail.com>"]

[dependencies]
anyhow = "=1.0.71"
embedded-svc = "=0.25.0"
esp-idf-hal = "=0.41.1"
esp-idf-svc = { version = "=0.46.0", features = ["experimental", "alloc"] }
esp-idf-sys = "=0.33.0"
log = "=0.4.18"

[build-dependencies]
anyhow = "=1.0.71"
embuild = "=0.31.2"

[dev-dependencies]
anyhow = "=1.0.71"
esp-idf-sys = { version = "=0.33.0", features = ["native", "binstart"] }
toml-cfg = "=0.1.3"
