[package]
name = "example-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = "0.10.0"
rand = "0.8.4"
toml-cfg = "0.1"
get-uuid = { path = "../../../common/lib/get-uuid" }
mqtt-messages = { path = "../../../common/lib/mqtt-messages" }