[package]
name = "mqtt"
version = "0.1.0"
authors = [
    "Anatol Ulrich <anatol.ulrich@ferrous-systems.com>",
    "Sergio Gasquez <sergio.gasquez@gmail.com>",
]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug     = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
anyhow        = "=1.0.75"
embedded-svc  = "=0.26.4"
esp-idf-svc   = "=0.47.3"
get-uuid      = { path = "../../../common/lib/get-uuid" }
log           = "=0.4.20"
mqtt-messages = { path = "../../../common/lib/mqtt-messages" }
rgb-led       = { path = "../../../common/lib/rgb-led" }
shtcx         = "=0.11.0"
toml-cfg      = "=0.1.3"
wifi          = { path = "../../../common/lib/wifi" }

[build-dependencies]
embuild  = "=0.31.4"
toml-cfg = "=0.1.3"
