[package]
name = "mqtt"
version = "0.1.0"
authors = [
    "Anatol Ulrich <anatol.ulrich@ferrous-systems.com>",
    "Sergio Gasquez <sergio.gasquez@gmail.com>",
]
edition = "2021"
resolver = "2"

[[bin]]
name = "mqtt"
harness = false # We can't use the default rust libtest harness for a crosscompile target

[profile.release]
opt-level = "s"

[profile.dev]
debug     = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
anyhow        = "=1.0.95"
embedded-svc  = "=0.28.1"
esp-idf-svc   = "=0.50.1"
get-uuid      = { path = "../../../common/lib/get-uuid" }
log           = "=0.4.22"
mqtt-messages = { path = "../../../common/lib/mqtt-messages" }
rgb-led       = { path = "../../../common/lib/rgb-led" }
shtcx         = "=1.0.0"
toml-cfg      = "=0.1.3"
wifi          = { path = "../../../common/lib/wifi" }

[build-dependencies]
embuild  = "=0.33.0"
toml-cfg = "=0.1.3"
